# TonyTools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mise.toml
.github/workflows/: build.yml  docs.yml
BOXCExporter/: CMakeLists.txt
BOXCExporter/include/: Texture.hpp  buffer.hpp  main.h
BOXCExporter/src/: main.cpp
Documentation/: index.md  package.json  pnpm-lock.yaml
Documentation/.vitepress/: config.ts
Documentation/.vitepress/theme/: index.ts  main.css
Documentation/general/: installation.md  thirdparty.md
Documentation/libraries/: hmlanguages.md
Documentation/public/: robots.txt
Documentation/public/schemas/: clng.schema.json  ditl.schema.json  dlge.schema.json  locr.schema.json  rtlv.schema.json  texture-meta.schema.json  version-config.schema.json
Documentation/tools/: README.md  boxcexporter.md  gfxfzip.md  hmascrambler.md  hmlanguagetools.md  hmtexturetools.md  jsonpatchcreator.md  mate.md  mjbatesting.md  scda.md  vtxd.md
HMAScrambler/: CMakeLists.txt
HMLanguageTools/: CMakeLists.txt
HMLanguageTools/include/: Language.h  buffer.hpp
HMLanguageTools/src/: Language.cpp  bimap.hpp  main.cpp
HMTextureTools/: CMakeLists.txt
HMTextureTools/include/: Texture.h
HMTextureTools/src/: Texture.cpp  main.cpp
JSONPatchCreator/: CMakeLists.txt
JSONPatchCreator/src/: main.cpp
Libraries/HMLanguages/: CMakeLists.txt
Libraries/HMLanguages/include/TonyTools/: Languages.h
Libraries/HMLanguages/include/tonytools/: Languages.h
Libraries/HMLanguages/src/: Languages.cpp  bimap.hpp  zip.hpp
MJBATesting/: CMakeLists.txt
MJBATesting/include/: main.h
MJBATesting/src/: main.cpp
SCDA/include/: buffer.hpp
SCDA/src/: main.cpp
Tools/BOXCExporter/: CMakeLists.txt
Tools/BOXCExporter/include/: EncodingDevice.h  buffer.hpp
Tools/GFXFzip/: CMakeLists.txt
Tools/GFXFzip/include/: Base64.h  GFXFzip.h
Tools/GFXFzip/src/: GFXFzip.cpp  main.cpp
Tools/HMAScrambler/include/: main.h
Tools/HMAScrambler/src/: main.cpp
Tools/HMLanguageTools/: CMakeLists.txt
Tools/HMLanguageTools/src/: main.cpp
Tools/HMTextureTools/include/: Global.h  Texture.h
Tools/HMTextureTools/src/: EncodingDevice.cpp  Texture.cpp  main.cpp
Tools/JSONPatchCreator/: CMakeLists.txt
Tools/JSONPatchCreator/src/: main.cpp
Tools/MATE/: CMakeLists.txt
Tools/MATE/include/: buffer.hpp  main.h
Tools/MATE/src/: main.cpp
Tools/MJBATesting/src/: main.cpp
Tools/SCDA/: CMakeLists.txt
Tools/VTXD/: CMakeLists.txt
Tools/VTXD/include/: main.h
VTXD/src/: main.cpp
